--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,13 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+	 
+        <h2><font color="blue"><i>News</i></font></h2>
+	      <p>Three papers accepted by ICDE 2021. Congrats to Saeed, Natasha and Faisal. </p>
+        
+</div>
+  
+<p>Three papers accepted by ICDE 2021. Congrats to Saeed, Natasha and Faisal. </p>
       </header>
       <section>
 
