--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,10 @@
         {% endif %}
 	      
 	<h2><font color="blue"><i>News</i></font></h2>
-	    <p>Three papers accepted by ICDE 2021. Congrats to Saeed, Natasha and Faisal. </p>
+	      <p>Three papers accepted by ICDE 2021. Congrats to Saeed, Natasha and Faisal! </p>
+	      <p>Three papers accepted by ICDE 2021. Congrats to Saeed, Natasha and Faisal! </p>
+	      <p>  </p>
+	      <p>Three papers accepted by ICDE 2021. Congrats to Saeed, Natasha and Faisal! </p>
 	      
       </header>
       <section>
